work ok not good

--- a/phish_classifier_multi_source_urlextractor (3).ipynb
+++ b/phish_classifier_multi_source_urlextractor (3).ipynb
@@ -22,12 +22,24 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 5,
       "id": "29e10d1c",
       "metadata": {
         "id": "29e10d1c"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ModuleNotFoundError",
+          "evalue": "No module named 'tldextract'",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[5], line 16\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01msvm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m SVC\n\u001b[0;32m     15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtqdm\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m tqdm\n\u001b[1;32m---> 16\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mtldextract\u001b[39;00m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbase64\u001b[39;00m\u001b[38;5;241m,\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mbinascii\u001b[39;00m\n\u001b[0;32m     18\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01murllib\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mparse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m urlparse, parse_qs\n",
+            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'tldextract'"
+          ]
+        }
+      ],
       "source": [
         "#!pip install pandas scikit-learn tldextract pyarrow tqdm  # uncomment if needed\n",
         "#!pip install tldextract\n",
@@ -58,7 +70,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "id": "fb510bd9",
       "metadata": {
         "colab": {
@@ -69,8 +81,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Registered 23 data source(s).\n"
           ]
@@ -132,7 +144,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "id": "lpJSKpkSS_66",
       "metadata": {
         "colab": {
@@ -143,8 +155,8 @@
       },
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
@@ -500,14 +512,130 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "id": "b77c812a",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: sklearn-porter in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (0.7.4)\n",
+            "Requirement already satisfied: six in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from sklearn-porter) (1.17.0)\n",
+            "Requirement already satisfied: scikit-learn>=0.14.1 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from sklearn-porter) (1.2.2)\n",
+            "Requirement already satisfied: numpy>=1.17.3 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn>=0.14.1->sklearn-porter) (1.24.3)\n",
+            "Requirement already satisfied: scipy>=1.3.2 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn>=0.14.1->sklearn-porter) (1.11.2)\n",
+            "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn>=0.14.1->sklearn-porter) (1.4.2)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn>=0.14.1->sklearn-porter) (3.5.0)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Requirement already satisfied: m2cgen in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (0.10.0)\n",
+            "Requirement already satisfied: numpy in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from m2cgen) (1.24.3)\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+          ]
+        },
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Found existing installation: onnx 1.14.1\n",
+            "Uninstalling onnx-1.14.1:\n",
+            "  Successfully uninstalled onnx-1.14.1\n",
+            "Found existing installation: skl2onnx 1.14.0\n",
+            "Uninstalling skl2onnx-1.14.0:\n",
+            "  Successfully uninstalled skl2onnx-1.14.0\n",
+            "Note: you may need to restart the kernel to use updated packages.\n",
+            "Collecting skl2onnx==1.14\n",
+            "  Using cached skl2onnx-1.14.0-py2.py3-none-any.whl.metadata (2.1 kB)\n",
+            "Collecting onnx==1.14.1\n",
+            "  Using cached onnx-1.14.1-cp310-cp310-win_amd64.whl.metadata (15 kB)\n",
+            "Collecting onnxmltools==1.11\n",
+            "  Downloading onnxmltools-1.11.0-py2.py3-none-any.whl.metadata (8.3 kB)\n",
+            "Requirement already satisfied: scikit-learn<1.3,>=0.19 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from skl2onnx==1.14) (1.2.2)\n",
+            "Requirement already satisfied: onnxconverter-common>=1.7.0 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from skl2onnx==1.14) (1.13.0)\n",
+            "Requirement already satisfied: numpy in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from onnx==1.14.1) (1.24.3)\n",
+            "Requirement already satisfied: protobuf>=3.20.2 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from onnx==1.14.1) (6.31.0)\n",
+            "Requirement already satisfied: typing-extensions>=3.6.2.1 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from onnx==1.14.1) (4.12.2)\n",
+            "Requirement already satisfied: packaging in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from onnxconverter-common>=1.7.0->skl2onnx==1.14) (24.2)\n",
+            "Requirement already satisfied: scipy>=1.3.2 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn<1.3,>=0.19->skl2onnx==1.14) (1.11.2)\n",
+            "Requirement already satisfied: joblib>=1.1.1 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn<1.3,>=0.19->skl2onnx==1.14) (1.4.2)\n",
+            "Requirement already satisfied: threadpoolctl>=2.0.0 in c:\\users\\omer penso\\appdata\\local\\programs\\python\\python310\\lib\\site-packages (from scikit-learn<1.3,>=0.19->skl2onnx==1.14) (3.5.0)\n",
+            "Using cached skl2onnx-1.14.0-py2.py3-none-any.whl (294 kB)\n",
+            "Using cached onnx-1.14.1-cp310-cp310-win_amd64.whl (13.3 MB)\n",
+            "Downloading onnxmltools-1.11.0-py2.py3-none-any.whl (302 kB)\n",
+            "Installing collected packages: onnx, skl2onnx, onnxmltools\n",
+            "Successfully installed onnx-1.14.1 onnxmltools-1.11.0 skl2onnx-1.14.0\n",
+            "Note: you may need to restart the kernel to use updated packages.\n"
+          ]
+        },
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "[notice] A new release of pip is available: 25.0.1 -> 25.1.1\n",
+            "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+          ]
+        }
+      ],
+      "source": [
+        "%pip install sklearn-porter\n",
+        "%pip install m2cgen\n",
+        "%pip install skl2onnx==1.14 onnx==1.14.1 onnxmltools==1.11\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "id": "iYh0BDPvTWW6",
       "metadata": {
         "id": "iYh0BDPvTWW6"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "ImportError",
+          "evalue": "cannot import name 'split_complex_to_pairs' from 'onnx.helper' (c:\\Users\\omer penso\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\onnx\\helper.py)",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
+            "Cell \u001b[1;32mIn[14], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mensemble\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m RandomForestClassifier\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mm2cgen\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mm2c\u001b[39;00m\u001b[38;5;241m,\u001b[39m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01msys\u001b[39;00m\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mskl2onnx\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m convert_sklearn\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mskl2onnx\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mdata_types\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m FloatTensorType\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mjoblib\u001b[39;00m\n",
+            "File \u001b[1;32mc:\\Users\\omer penso\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\skl2onnx\\__init__.py:15\u001b[0m\n\u001b[0;32m     11\u001b[0m __model_version__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[0;32m     12\u001b[0m __max_supported_opset__ \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m18\u001b[39m  \u001b[38;5;66;03m# Converters are tested up to this version.\u001b[39;00m\n\u001b[1;32m---> 15\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mconvert\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m convert_sklearn, to_onnx, wrap_as_onnx_mixin  \u001b[38;5;66;03m# noqa\u001b[39;00m\n\u001b[0;32m     16\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_supported_operators\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m (  \u001b[38;5;66;03m# noqa\u001b[39;00m\n\u001b[0;32m     17\u001b[0m     update_registered_converter, get_model_alias\n\u001b[0;32m     18\u001b[0m )\n\u001b[0;32m     19\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_parse\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m update_registered_parser  \u001b[38;5;66;03m# noqa\u001b[39;00m\n",
+            "File \u001b[1;32mc:\\Users\\omer penso\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\skl2onnx\\convert.py:5\u001b[0m\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mwarnings\u001b[39;00m\n\u001b[0;32m      4\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01muuid\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m uuid4\n\u001b[1;32m----> 5\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mproto\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m get_latest_tested_opset_version\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01m_topology\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m convert_topology\n\u001b[0;32m      7\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mcommon\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mutils_sklearn\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m _process_options\n",
+            "File \u001b[1;32mc:\\Users\\omer penso\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\skl2onnx\\proto\\__init__.py:20\u001b[0m\n\u001b[0;32m     17\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mImportError\u001b[39;00m:\n\u001b[0;32m     18\u001b[0m     \u001b[38;5;66;03m# onnx is too old.\u001b[39;00m\n\u001b[0;32m     19\u001b[0m     \u001b[38;5;28;01mpass\u001b[39;00m\n\u001b[1;32m---> 20\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01monnx\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mhelper\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m split_complex_to_pairs\n\u001b[0;32m     23\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21mmake_tensor_fixed\u001b[39m(name, data_type, dims, vals, raw\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mFalse\u001b[39;00m):\n\u001b[0;32m     24\u001b[0m \u001b[38;5;250m    \u001b[39m\u001b[38;5;124;03m'''\u001b[39;00m\n\u001b[0;32m     25\u001b[0m \u001b[38;5;124;03m    Make a TensorProto with specified arguments.  If raw is False, this\u001b[39;00m\n\u001b[0;32m     26\u001b[0m \u001b[38;5;124;03m    function will choose the corresponding proto field to store the\u001b[39;00m\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m     29\u001b[0m \u001b[38;5;124;03m    this case.\u001b[39;00m\n\u001b[0;32m     30\u001b[0m \u001b[38;5;124;03m    '''\u001b[39;00m\n",
+            "\u001b[1;31mImportError\u001b[0m: cannot import name 'split_complex_to_pairs' from 'onnx.helper' (c:\\Users\\omer penso\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\onnx\\helper.py)"
+          ]
+        }
+      ],
       "source": [
         "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn_porter import Porter\n",
         "import m2cgen as m2c, sys\n",
+        "from skl2onnx import convert_sklearn\n",
+        "from skl2onnx.common.data_types import FloatTensorType\n",
+        "import joblib\n",
         "\n",
         "sys.setrecursionlimit(20000)                # still raise the limit\n",
         "\n",
@@ -518,16 +646,51 @@
         "    n_jobs=-1\n",
         ").fit(X_tr, y_tr)\n",
         "\n",
-        "js_model_code = m2c.export_to_javascript(rf_shallow,\n",
-        "                                         function_name=\"predictRF\")\n",
         "\n",
-        "with open(\"rf_model.js\", \"w\") as f:\n",
-        "    f.write(js_model_code)\n",
+        "# Convert model to JavaScript\n",
+        "porter = Porter(rf_shallow, language='js')\n",
+        "js_code = porter.export(embed_data=True)\n",
         "\n",
-        "print(\"JS model saved, size ≈\", len(js_model_code)//1024, \"KB\")\n",
+        "# Save to file\n",
+        "with open('rf_shallow.js', 'w') as f:\n",
+        "    f.write(js_code)\n",
         "\n",
-        "print(list(ohe.get_feature_names_out(['tld'])))\n"
+        "# joblib.dump(rf_shallow, \"rf_model.pkl\")\n",
+        "\n",
+        "# model = joblib.load(\"rf_model.pkl\")\n",
+        "\n",
+        "# # Set input type (adjust input dimension)\n",
+        "# n_features = X_tr.shape[1]\n",
+        "# initial_type = [('float_input', FloatTensorType([None, n_features]))]\n",
+        "\n",
+        "# # Convert to ONNX\n",
+        "# onnx_model = convert_sklearn(model, initial_types=initial_type)\n",
+        "\n",
+        "# # Save ONNX model\n",
+        "# with open(\"rf_model.onnx\", \"wb\") as f:\n",
+        "#     f.write(onnx_model.SerializeToString())\n",
+        "\n",
+        "# I'm commenting to try another porter\n",
+        "# js_model_code = m2c.export_to_javascript(rf_shallow,\n",
+        "#                                          function_name=\"predictRF\")\n",
+        "\n",
+        "# with open(\"rf_model.js\", \"w\") as f:\n",
+        "#     f.write(js_model_code)\n",
+        "\n",
+        "# print(\"JS model saved, size ≈\", len(js_model_code)//1024, \"KB\")\n",
+        "\n",
+        "# print(list(ohe.get_feature_names_out(['tld'])))\n",
+        "\n",
+        "\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "id": "f233b687",
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
@@ -539,7 +702,16 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.10.0"
     }
   },
   "nbformat": 4,
